@@ -136,6 +136,12 @@ disentry dlist[]={
 {rndd, "rndd", D_NONE},
 {setsound, "setsound", D_NONE},
 {sgnd, "sgnd", D_NONE},
+{shcubic, "shcubic", D_NONE},
+{shcurve, "shcurve", D_NONE},
+{shdone, "shdone", D_NONE},
+{shend, "shend", D_NONE},
+{shinit, "shinit", D_NONE},
+{shline, "shline", D_NONE},
 {sind, "sind", D_NONE},
 {skip2ne, "skip2ne", D_NONE},
 {sleepd, "sleepd", D_NONE},
